--- a/index/index.html
+++ b/index/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        .red {
+            background-color: hotpink;
+        }
+        .green {
+            background-color: yellowgreen;
+        }
+        .blue {
+            background-color: skyblue;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        你好吗？
-
-    </div>
+<div ng-controller="myCrty">
+    <input  ng-click="dianji()" type="button" value="显示/隐藏">
+    <p ng-class="{blue:test}" class="{{$even?'red':'green'}}" ng-show ="isshowt" ng-repeat="item in users">
+        {{item.name}} {{item.age}}
+    </p>
+    <input ng-dblclick="dbclick()" type="button">
+</div>
+<script src ="../node_modules/angular/angular.js"></script>
+<script src ="index.js"></script>
 </body>
 </html>
